syntax = "proto3";

package riotAPI;

import "riot_api/translation.proto";

message Message{
    string author = 1;
    string content = 2;
    string created_at= 3;
    string id = 4;
    string severity = 5;
    repeated riotAPI.Translation translations = 6;
    string updated_at = 7;
}